[package]
name = "clust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = {version="0.21.2", features=["rand", "bitcoin_hashes"]}
tungstenite = {version="0.16.0", features=["native-tls"]}
clap = {version="3.0.12", features=["derive"]}
url = "2.2.2"
schnorr_fun = "0.7"
sha2 = "0.9"
rand = "0.8.4"
hex = "0.4.3"
json = "0.12.4"
chrono = "0.4.19"
