[package]
name = "clust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = {version="0.16.0", features=["native-tls"]}
clap = {version="3.0.12", features=["derive"]}
url = "2.2.2"
sha2 = "0.9"
hex = "0.4.3"
chrono = "0.4.19"
serde_json = "1.0.78"
rand = "0.8.4"
secp256k1 = {version="0.21.2", features=["rand-std", "bitcoin_hashes"]}